# MPC_Multirotor_ROS

./: README.md
Data/: DATA_MULTIROTOR_2017_11_5_16_10_44.txt  DATA_MULTIROTOR_2017_11_5_16_12_1.txt  DATA_MULTIROTOR_2017_11_5_16_12_43.txt  DATA_MULTIROTOR_2017_11_5_16_13_58.txt  DATA_MULTIROTOR_2017_11_5_16_14_54.txt  DATA_MULTIROTOR_2017_11_5_16_16_37.txt  DATA_MULTIROTOR_2017_11_5_16_18_1.txt  DATA_MULTIROTOR_2017_11_5_16_18_47.txt  DATA_MULTIROTOR_2017_11_5_16_22_17.txt  DATA_MULTIROTOR_2017_11_5_16_24_31.txt  DATA_MULTIROTOR_2017_11_5_16_25_29.txt  DATA_MULTIROTOR_2017_11_5_16_27_36.txt  DATA_MULTIROTOR_2017_11_5_16_27_59.txt  DATA_MULTIROTOR_2017_11_5_16_28_59.txt  DATA_MULTIROTOR_2017_11_5_16_30_13.txt  DATA_MULTIROTOR_2017_11_5_16_30_49.txt  DATA_MULTIROTOR_2017_11_5_16_34_54.txt  DATA_MULTIROTOR_2017_11_5_16_35_34.txt  DATA_MULTIROTOR_2017_11_5_16_35_52.txt  DATA_MULTIROTOR_2017_11_5_16_36_40.txt  DATA_MULTIROTOR_2017_11_5_16_37_28.txt  DATA_MULTIROTOR_2017_11_5_16_37_5.txt  DATA_MULTIROTOR_2017_11_5_16_37_55.txt  DATA_MULTIROTOR_2017_11_5_16_40_4.txt  DATA_MULTIROTOR_2017_11_5_16_9_44.txt  DATA_MULTIROTOR_2017_11_5_19_14_44.txt  DATA_MULTIROTOR_2017_11_5_19_17_34.txt  DATA_MULTIROTOR_2017_11_5_19_19_38.txt  DATA_MULTIROTOR_2017_11_5_20_10_15.txt  DATA_MULTIROTOR_2017_11_5_20_11_0.txt  DATA_MULTIROTOR_2017_11_5_20_13_14.txt  DATA_MULTIROTOR_2017_11_5_20_13_32.txt  DATA_MULTIROTOR_THRUST_2017_11_5_16_10_44.txt  DATA_MULTIROTOR_THRUST_2017_11_5_16_12_0.txt  DATA_MULTIROTOR_THRUST_2017_11_5_16_12_43.txt  DATA_MULTIROTOR_THRUST_2017_11_5_16_13_57.txt  DATA_MULTIROTOR_THRUST_2017_11_5_16_14_54.txt  DATA_MULTIROTOR_THRUST_2017_11_5_16_16_37.txt  DATA_MULTIROTOR_THRUST_2017_11_5_16_18_0.txt  DATA_MULTIROTOR_THRUST_2017_11_5_16_18_47.txt  (+160 more)
devel/: .catkin  .rosinstall  setup.sh
devel/lib/eigen_tutorial/: eigen_tutorial
devel/lib/environment_maker/: environment_maker
devel/lib/mpc_nominal/: mpc_nominal
devel/lib/pkgconfig/: eigen_tutorial.pc  environment_maker.pc  mpc_nominal.pc
devel/share/MPC_nominal/cmake/: MPC_nominalConfig.cmake
devel/share/eigen_tutorial/cmake/: eigen_tutorialConfig.cmake
devel/share/environment_maker/cmake/: environment_makerConfig.cmake
devel/share/mpc_nominal/cmake/: mpc_nominalConfig.cmake
devel_isolated/data_logger/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/data_logger/lib/data_logger/: data_logger
devel_isolated/data_logger/lib/pkgconfig/: data_logger.pc
devel_isolated/data_logger/share/data_logger/cmake/: data_loggerConfig.cmake
devel_isolated/environment_maker/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/environment_maker/lib/environment_maker/: environment_maker
devel_isolated/environment_maker/lib/pkgconfig/: environment_maker.pc
devel_isolated/environment_maker/share/environment_maker/cmake/: environment_makerConfig.cmake
devel_isolated/load_cell/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/load_cell/lib/load_cell/: load_cell
devel_isolated/load_cell/lib/pkgconfig/: load_cell.pc
devel_isolated/mpc_icra/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel_isolated/mpc_icra/include/mpc_icra/: Attitude.h  Gain.h  Position.h  SlungLoadState.h
devel_isolated/mpc_icra/lib/mpc_icra/: syd_tfToPose
devel_isolated/mpc_icra/lib/pkgconfig/: mpc_icra.pc
src/data_logger/: CMakeLists.txt  package.xml
src/data_logger/include/: data_logger.h  log_ids.h  message_handler.h  privateFunctions.h
src/data_logger/include/TNT/: jama_lu.h  jama_qr.h  tnt.h  tnt_array1d.h  tnt_array2d.h  tnt_array2d_utils.h  tnt_array3d.h  tnt_cmat.h  tnt_fortran_array1d.h  tnt_fortran_array1d_utils.h  tnt_fortran_array2d.h  tnt_fortran_array2d_utils.h  tnt_fortran_array3d.h  tnt_i_refvec.h  tnt_vec.h
src/data_logger/launch/: syd.launch
src/data_logger/src/: data_logger.cpp  main.cpp  message_handler.cpp
src/environment_maker/: CMakeLists.txt  package.xml
src/environment_maker/launch/: mpc_nominal.launch
src/environment_maker/src/: main.cpp
src/load_cell/: CMakeLists.txt  package.xml
src/load_cell/src/: main.cpp
src/mpc_nominal/: CMakeLists.txt
src/mpc_nominal/Data/: DATA_MULTIROTOR_SIMULATION_ANALYTIC_2017_4_26_18_16_55.txt  DATA_MULTIROTOR_SIMULATION_ANALYTIC_2017_4_26_18_20_18.txt  DATA_MULTIROTOR_SIMULATION_ANALYTIC_2017_4_26_18_40_2.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_14_16_25.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_14_16_54.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_14_19_35.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_14_21_8.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_14_22_24.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_14_25_57.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_14_28_22.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_14_29_18.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_14_59_28.txt  DATA_SLUNGLOAD_SIMULATION_ANALYTIC_2017_4_20_15_6_51.txt  log_viewer_mpc.m
src/mpc_nominal/include/: .Mpc.h.swp  MPCDataLogger.h  Mpc.h  Params.h
src/mpc_nominal/launch/: mpc_experiment.launch  mpc_nominal.launch
src/mpc_nominal/src/: MPCDataLogger.cpp  Mpc.cpp  drawLoad.m  drawRotors.m  main.cpp
src/mpc_sitl/: CMakeLists.txt  package.xml
src/mpc_sitl/include/: MPCDataLogger.h  Mpc.h  Params.h
src/mpc_sitl/launch/: mpc_experiment.launch  mpc_test.launch
src/mpc_sitl/src/: MPCDataLogger.cpp  Mpc.cpp  Mpc.cpp.orig  drawCable.m
src/mpc_test/: CMakeLists.txt  package.xml
src/mpc_test/include/: MPCDataLogger.h  Mpc.h  Params.h
src/mpc_test/src/: MPCDataLogger.cpp  Mpc.cpp  log_viewer_mpc.m~
src/mpc_trajectory_publisher/: CMakeLists.txt  package.xml
src/mpc_trajectory_publisher/src/: main.cpp
src/obstacle_manager/: CMakeLists.txt  package.xml
src/obstacle_manager/include/: ObstacleManager.h
src/obstacle_manager/launch/: default.launch
src/obstacle_manager/src/: ObstacleManager.cpp  main.cpp  parameters.yaml
src/velocity_proof/: CMakeLists.txt  package.xml
src/velocity_proof/launch/: velocity_proof.launch
src/velocity_proof/src/: log_viewer.m  main.cpp
(+19 files in other folders)
