<?xml version="1.0"?>
<package>
  <name>environment_maker</name>
  <version>0.0.0</version>
  <description>environment_maker package</description>

  <maintainer email="youngdong@todo.todo">youngdong</maintainer>


  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
